--- a/css/style.sass
+++ b/css/style.sass
@@ -1,35 +1,51 @@
 .head
   margin-bottom: 100px
-  background: black
-  height: 450px
+  height: 460px
+  background-color: #3b4858
+  background: url("../img/bg_001.png")
 
 .soon
-  margin-bottom: 63pxs
-  .title
-    margin-bottom: 8px
-    padding-bottom: 14px
-    font-family: 'Rubik', sans-serif
-    font-family: Rubik
-    font-size: 27px
-    font-weight: bold
-    font-style: normal
-    font-stretch: normal
-    line-height: normal
-    letter-spacing: normal
-    color: #505152
-    span
-      padding: 5px 20px
-      margin-left: 33px
-      box-sizing: border-box
-      border-radius: 20px
-      background-color: #e6a300
-      color: white
-  .content
-    font-family: 'Open Sans', sans-serif
-    font-size: 27px
-    font-weight: normal
-    font-style: normal
-    font-stretch: normal
-    line-height: normal
-    letter-spacing: normal
-    color: #505152
+  .col-md-4
+    h2
+      font-family: Rubik
+      font-size: 74px
+      font-weight: bold
+      font-style: normal
+      font-stretch: normal
+      line-height: normal
+      letter-spacing: normal
+      color: #1f1f1f
+  .col-md-8
+    article
+      margin-bottom: 63px
+      .title
+        margin-bottom: 8px
+        padding-bottom: 14px
+        font-family: 'Rubik', sans-serif
+        font-family: Rubik
+        font-size: 27px
+        font-weight: bold
+        font-style: normal
+        font-stretch: normal
+        line-height: normal
+        letter-spacing: normal
+        color: #505152
+        span
+          padding: 5px 20px
+          margin-left: 33px
+          box-sizing: border-box
+          border-radius: 20px
+          color: white
+          &.orange
+            background-color: #e6a300
+          &.blue
+            background-color: #00bbe6
+      .content
+        font-family: 'Open Sans', sans-serif
+        font-size: 27px
+        font-weight: normal
+        font-style: normal
+        font-stretch: normal
+        line-height: normal
+        letter-spacing: normal
+        color: #505152
