--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,26 @@
 .head {
   margin-bottom: 100px;
-  background: black;
-  height: 450px;
+  height: 460px;
+  background-color: #3b4858;
+  background: url("../img/bg_001.png");
 }
 
-.soon {
-  margin-bottom: 63pxs;
+.soon .col-md-4 h2 {
+  font-family: Rubik;
+  font-size: 74px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #1f1f1f;
 }
 
-.soon .title {
+.soon .col-md-8 article {
+  margin-bottom: 63px;
+}
+
+.soon .col-md-8 article .title {
   margin-bottom: 8px;
   padding-bottom: 14px;
   font-family: 'Rubik', sans-serif;
@@ -22,17 +34,24 @@
   color: #505152;
 }
 
-.soon .title span {
+.soon .col-md-8 article .title span {
   padding: 5px 20px;
   margin-left: 33px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 20px;
-  background-color: #e6a300;
   color: white;
 }
 
-.soon .content {
+.soon .col-md-8 article .title span.orange {
+  background-color: #e6a300;
+}
+
+.soon .col-md-8 article .title span.blue {
+  background-color: #00bbe6;
+}
+
+.soon .col-md-8 article .content {
   font-family: 'Open Sans', sans-serif;
   font-size: 27px;
   font-weight: normal;
