--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,26 @@
 .head {
-  margin-bottom: 100px;
+  position: relative;
+  overflow: hidden;
   height: 460px;
   background-color: #3b4858;
   background: url("../img/bg_001.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.soon .col-md-4 h2 {
+.head .round-img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 100% 100% 0 0;
+  margin-bottom: -270px;
+  margin-left: -10%;
+  width: 120%;
+  height: 400px;
+  background-color: #fff;
+}
+
+.soon h2, .changes h2 {
   font-family: Rubik;
   font-size: 74px;
   font-weight: bold;
@@ -16,11 +31,24 @@
   color: #1f1f1f;
 }
 
-.soon .col-md-8 article {
+.soon h3, .changes h3 {
+  margin-bottom: 30px;
+  opacity: 0.5;
+  font-family: 'Rubik', sans-serif;
+  font-size: 37px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #9a9a9a;
+}
+
+.soon .col-lg-8 article {
   margin-bottom: 63px;
 }
 
-.soon .col-md-8 article .title {
+.soon .col-lg-8 article .title {
   margin-bottom: 8px;
   padding-bottom: 14px;
   font-family: 'Rubik', sans-serif;
@@ -34,7 +62,7 @@
   color: #505152;
 }
 
-.soon .col-md-8 article .title span {
+.soon .col-lg-8 article .title span {
   padding: 5px 20px;
   margin-left: 33px;
   -webkit-box-sizing: border-box;
@@ -43,15 +71,56 @@
   color: white;
 }
 
-.soon .col-md-8 article .title span.orange {
+.soon .col-lg-8 article .title span.orange {
   background-color: #e6a300;
 }
 
-.soon .col-md-8 article .title span.blue {
+.soon .col-lg-8 article .title span.blue {
   background-color: #00bbe6;
 }
 
-.soon .col-md-8 article .content {
+.soon .col-lg-8 article .content {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 27px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #505152;
+}
+
+.changes .container {
+  margin-bottom: 43px;
+}
+
+.changes .container h2 {
+  text-transform: uppercase;
+}
+
+.changes .col-lg-6 article .title {
+  margin-bottom: 8px;
+  padding-bottom: 14px;
+  font-family: 'Rubik', sans-serif;
+  font-family: Rubik;
+  font-size: 27px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #505152;
+}
+
+.changes .col-lg-6 article .post-img {
+  width: 100%;
+  height: 100%;
+  max-height: 210px;
+  min-height: 210px;
+  background: #d8d8d8;
+}
+
+.changes .col-lg-6 article .content {
   font-family: 'Open Sans', sans-serif;
   font-size: 27px;
   font-weight: normal;
