--- a/css/style.sass
+++ b/css/style.sass
@@ -1,21 +1,50 @@
 .head
-  margin-bottom: 100px
+  position: relative
+  overflow: hidden
+  // margin-bottom: 100px
   height: 460px
   background-color: #3b4858
   background: url("../img/bg_001.png")
+  background-size: cover
+  background-repeat: no-repeat
+  .round-img
+    position: absolute
+    bottom: 0
+    left: 0
+    border-radius: 100% 100% 0 0
+    margin-bottom: -270px
+    margin-left: -10%
+    width: 120%
+    height: 400px
+    background-color: #fff
+    // background: url("../img/white-thing.png")
+    // background-size: cover
+    // background-repeat: no-repeat
+
+.soon, .changes
+  h2
+    font-family: Rubik
+    font-size: 74px
+    font-weight: bold
+    font-style: normal
+    font-stretch: normal
+    line-height: normal
+    letter-spacing: normal
+    color: #1f1f1f
+  h3
+    margin-bottom: 30px
+    opacity: 0.5
+    font-family: 'Rubik', sans-serif
+    font-size: 37px
+    font-weight: bold
+    font-style: normal
+    font-stretch: normal
+    line-height: normal
+    letter-spacing: normal
+    color: #9a9a9a
 
 .soon
-  .col-md-4
-    h2
-      font-family: Rubik
-      font-size: 74px
-      font-weight: bold
-      font-style: normal
-      font-stretch: normal
-      line-height: normal
-      letter-spacing: normal
-      color: #1f1f1f
-  .col-md-8
+  .col-lg-8
     article
       margin-bottom: 63px
       .title
@@ -40,6 +69,41 @@
             background-color: #e6a300
           &.blue
             background-color: #00bbe6
+      .content
+        font-family: 'Open Sans', sans-serif
+        font-size: 27px
+        font-weight: normal
+        font-style: normal
+        font-stretch: normal
+        line-height: normal
+        letter-spacing: normal
+        color: #505152
+
+.changes
+  .container
+    margin-bottom: 43px
+    h2
+      text-transform: uppercase
+  .col-lg-6
+    article
+      .title
+        margin-bottom: 8px
+        padding-bottom: 14px
+        font-family: 'Rubik', sans-serif
+        font-family: Rubik
+        font-size: 27px
+        font-weight: bold
+        font-style: normal
+        font-stretch: normal
+        line-height: normal
+        letter-spacing: normal
+        color: #505152
+      .post-img
+        width: 100%
+        height: 100%
+        max-height: 210px
+        min-height: 210px
+        background: #d8d8d8
       .content
         font-family: 'Open Sans', sans-serif
         font-size: 27px
