--- a/css/timeline_back.css
+++ b/css/timeline_back.css
@@ -3,7 +3,6 @@
   padding: 20px 0 20px;
   position: relative;
 }
-
 .timeline:before {
   top: 0;
   bottom: 0;
@@ -11,47 +10,39 @@
   content: " ";
   width: 3px;
   background-color: #eeeeee;
-  left: 0;
+  left: 0; /* 50% */
   margin-left: -1.5px;
 }
-
 .timeline > li {
   margin-bottom: 20px;
   position: relative;
 }
-
-.timeline > li:before {
-  content: " ";
-  display: table;
-}
-
+.timeline > li:before,
 .timeline > li:after {
   content: " ";
   display: table;
+}
+.timeline > li:after {
   clear: both;
 }
-
-.timeline > li:before {
-  content: " ";
-  display: table;
-}
-
+.timeline > li:before,
 .timeline > li:after {
   content: " ";
   display: table;
+}
+.timeline > li:after {
   clear: both;
 }
-
 .timeline > li > .timeline-panel {
   width: 100%;
+  float: left;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
-  padding: 80px;
+  padding: 20px;
   position: relative;
-  -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
-          box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
-
 .timeline > li > .timeline-panel:before {
   position: absolute;
   top: 26px;
@@ -63,7 +54,6 @@
   border-bottom: 15px solid transparent;
   content: " ";
 }
-
 .timeline > li > .timeline-panel:after {
   position: absolute;
   top: 27px;
@@ -75,7 +65,6 @@
   border-bottom: 14px solid transparent;
   content: " ";
 }
-
 .timeline > li > .timeline-badge {
   color: #fff;
   width: 50px;
@@ -85,7 +74,7 @@
   text-align: center;
   position: absolute;
   top: 16px;
-  left: 0;
+  left: 0; /* 50% */
   margin-left: -25px;
   background-color: #999999;
   z-index: 100;
@@ -94,60 +83,51 @@
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
 }
-
 .timeline > li.timeline-inverted > .timeline-panel {
-  margin-left: 60px;
+  /* float: right; */
+  margin-left: 60px
 }
-
 .timeline > li.timeline-inverted > .timeline-panel:before {
   border-left-width: 0;
   border-right-width: 15px;
   left: -15px;
   right: auto;
 }
-
 .timeline > li.timeline-inverted > .timeline-panel:after {
   border-left-width: 0;
   border-right-width: 14px;
   left: -14px;
   right: auto;
 }
-
 .timeline-badge.primary {
   background-color: #2e6da4 !important;
 }
-
 .timeline-badge.success {
   background-color: #3f903f !important;
 }
-
 .timeline-badge.warning {
   background-color: #f0ad4e !important;
 }
-
 .timeline-badge.danger {
   background-color: #d9534f !important;
 }
-
 .timeline-badge.info {
   background-color: #5bc0de !important;
 }
-
 .timeline-title {
   margin-top: 0;
   color: inherit;
 }
-
-.timeline-body > p, .timeline-body > ul {
+.timeline-body > p,
+.timeline-body > ul {
   margin-bottom: 0;
 }
-
 .timeline-body > p + p {
   margin-top: 5px;
 }
 
+
 .card-columns {
   -webkit-column-count: 2;
+  -moz-column-count: 2;
   column-count: 2;
-}
-/*# sourceMappingURL=timeline.css.map */
