--- a/css/timeline.css
+++ b/css/timeline.css
@@ -13,6 +13,7 @@
   background-color: #eeeeee;
   left: 0;
   margin-left: -1.5px;
+  margin-top: 110px;
 }
 
 .timeline > li {
@@ -78,17 +79,18 @@
 
 .timeline > li > .timeline-badge {
   color: #fff;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   line-height: 50px;
   font-size: 1.4em;
   text-align: center;
   position: absolute;
-  top: 16px;
+  top: 30px;
   left: 0;
-  margin-left: -25px;
-  background-color: #999999;
+  margin-left: -12px;
+  background-color: #fff;
   z-index: 100;
+  border: 2px solid #999;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
@@ -149,5 +151,7 @@
 .card-columns {
   -webkit-column-count: 2;
   column-count: 2;
+  -webkit-column-gap: 3rem;
+          column-gap: 3rem;
 }
 /*# sourceMappingURL=timeline.css.map */
