--- a/css/style.sass
+++ b/css/style.sass
@@ -58,6 +58,19 @@
     line-height: normal
     letter-spacing: normal
     color: #9a9a9a
+  h4
+    margin-bottom: 30px
+    margin-left: 60px
+    font-family: 'Rubik', sans-serif
+    font-size: 26px
+    font-weight: bold
+    font-style: normal
+    font-stretch: normal
+    line-height: normal
+    letter-spacing: normal
+    text-transform: uppercase
+    color: #2c2c2c
+
 
 .soon
   h2
