--- a/css/style.sass
+++ b/css/style.sass
@@ -7,6 +7,21 @@
   background: url("../img/bg_001.png")
   background-size: cover
   background-repeat: no-repeat
+  .go-back
+    padding: 50px 100px
+    color: white
+    font-family: 'Rubik', sans-serif
+    a  
+      color: rgba(255,255,255,0.8)
+      text-decoration: underline
+      &:hover
+        color: white
+  .tb-logo
+    background: url("../img/tb-logo.png")
+    background-size: cover
+    width: 242px
+    height: 48px
+    margin-top: 40px
   .round-img
     position: absolute
     bottom: 0
@@ -19,12 +34,12 @@
     background-color: #fff
     // background: url("../img/white-thing.png")
     // background-size: cover
-    // background-repeat: no-repeat
+    // background-repeat: no-repeat  
 
 .soon, .changes
   h2
     margin-bottom: 42px
-    font-family: Rubik
+    font-family: 'Rubik', sans-serif
     font-size: 74px
     font-weight: bold
     font-style: normal
