--- a/css/timeline.css
+++ b/css/timeline.css
@@ -47,7 +47,7 @@
   width: 100%;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
-  padding: 80px;
+  padding: 20px 80px 80px;
   position: relative;
   -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
           box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
@@ -138,6 +138,25 @@
 .timeline-title {
   margin-top: 0;
   color: inherit;
+}
+
+.timeline-subtitle {
+  display: inline-block;
+  width: 350px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 26px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #505152;
+}
+
+.timeline-emoji {
+  display: inline-block;
+  font-size: 76px;
+  margin-right: 30px;
 }
 
 .timeline-body > p, .timeline-body > ul {
