--- a/css/timeline.sass
+++ b/css/timeline.sass
@@ -35,7 +35,7 @@
         // float: left
         border: 1px solid #d4d4d4
         border-radius: 2px
-        padding: 80px
+        padding: 20px 80px 80px
         position: relative
         box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14)
         &:before
@@ -104,6 +104,23 @@
 .timeline-title
   margin-top: 0
   color: inherit
+
+.timeline-subtitle
+  display: inline-block
+  width: 350px
+  font-family: 'Rubik', sans-serif
+  font-size: 26px
+  font-weight: normal
+  font-style: normal
+  font-stretch: normal
+  line-height: normal
+  letter-spacing: normal
+  color: #505152
+.timeline-emoji
+  display: inline-block
+  font-size: 76px
+  margin-right: 30px
+
 
 .timeline-body >
   p, ul
