--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
 .soon h2, .changes h2 {
   margin-bottom: 42px;
   font-family: 'Rubik', sans-serif;
-  font-size: 74px;
+  font-size: 54px;
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -104,25 +104,26 @@
   color: #505152;
 }
 
-.soon .col-lg-8 article .title span {
+.soon .col-lg-8 article .title .status-bar {
   padding: 6px 14px;
-  margin-left: 33px;
+  margin-left: 25px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 10px;
   font-size: 18px;
   color: white;
+  white-space: nowrap;
 }
 
-.soon .col-lg-8 article .title span.orange {
+.soon .col-lg-8 article .title .status-bar.orange {
   background-color: #e6a300;
 }
 
-.soon .col-lg-8 article .title span.blue {
+.soon .col-lg-8 article .title .status-bar.blue {
   background-color: #00bbe6;
 }
 
-.soon .col-lg-8 article .title span.green {
+.soon .col-lg-8 article .title .status-bar.green {
   background: #00876b;
 }
 
@@ -179,9 +180,10 @@
 }
 
 .card-columns hr {
-  margin-bottom: 1.7rem;
-  width: 180px;
-  border-color: #979797;
+  margin: 0.5rem auto;
+  width: 80px;
+  border-width: 3px;
+  border-color: #cccccc;
 }
 
 .card-columns .card {
