--- a/css/style.sass
+++ b/css/style.sass
@@ -40,7 +40,7 @@
   h2
     margin-bottom: 42px
     font-family: 'Rubik', sans-serif
-    font-size: 74px
+    font-size: 54px
     font-weight: bold
     font-style: normal
     font-stretch: normal
@@ -90,13 +90,14 @@
         line-height: normal
         letter-spacing: normal
         color: #505152
-        span
+        .status-bar
           padding: 6px 14px
-          margin-left: 33px
+          margin-left: 25px
           box-sizing: border-box
           border-radius: 10px
           font-size: 18px
           color: white
+          white-space: nowrap 
           &.orange
             background-color: #e6a300
           &.blue
@@ -150,9 +151,10 @@
 
 .card-columns
   hr
-    margin-bottom: 1.7rem
-    width: 180px
-    border-color: #979797
+    margin: 0.5rem auto 
+    width: 80px
+    border-width: 3px
+    border-color: #cccccc
   .card
     border: none
     .card-body
