--- a/css/timeline.sass
+++ b/css/timeline.sass
@@ -35,7 +35,7 @@
         // float: left
         border: 1px solid #d4d4d4
         border-radius: 2px
-        padding: 20px 80px 80px
+        padding: 20px 30px
         position: relative
         box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14)
         &:before
@@ -133,3 +133,6 @@
   -moz-column-count: 2
   column-count: 2
   column-gap: 3rem
+
+.card-text
+  margin: 10px 0
