--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,6 @@
 }
 
 .soon h4, .changes h4 {
-  margin-bottom: 30px;
-  margin-left: 60px;
   font-family: 'Rubik', sans-serif;
   font-size: 26px;
   font-weight: bold;
@@ -193,5 +191,86 @@
 .card-columns .card .card-body .card-title span {
   font-weight: normal;
   color: #9a9a9a;
+}
+
+.developers {
+  margin-top: -60px;
+  margin-bottom: 40px;
+}
+
+.developers .developer {
+  display: inline-block;
+  padding-right: 52px;
+}
+
+.developers .developer:last-child {
+  padding-right: 0 !important;
+}
+
+.developers .developer .bubble p.speech {
+  position: relative;
+  width: 70px;
+  height: 32px;
+  margin-left: 40px;
+  margin-bottom: 24px;
+  text-align: center;
+  line-height: 24px;
+  padding: 0 4px;
+  background-color: #fff;
+  border: 3px solid #627189;
+  -webkit-box-shadow: 2px 2px 4px #888;
+          box-shadow: 2px 2px 4px #888;
+  font-family: 'Rubik', sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
+  color: #505152;
+}
+
+.developers .developer .bubble p.speech:before {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 7px;
+  top: 26px;
+  border: 10px solid;
+  border-color: #627189 transparent transparent #627189;
+}
+
+.developers .developer .bubble p.speech:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 10px;
+  top: 26px;
+  border: 6px solid;
+  border-color: #fff transparent transparent #fff;
+}
+
+.developers .developer .face {
+  font-family: AppleColorEmoji;
+  font-size: 52px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #1f1f1f;
+}
+
+.developers .developer .name {
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #505152;
 }
 /*# sourceMappingURL=style.css.map */
