--- a/css/timeline.css
+++ b/css/timeline.css
@@ -44,25 +44,12 @@
 }
 
 .timeline > li > .timeline-panel {
-  width: 100%;
-  border: 1px solid #d4d4d4;
-  border-radius: 2px;
+  width: calc(100% - 60px);
+  border-radius: 4px;
   padding: 20px 30px;
   position: relative;
   -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
           box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.14);
-}
-
-.timeline > li > .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  content: " ";
 }
 
 .timeline > li > .timeline-panel:after {
@@ -115,6 +102,30 @@
   right: auto;
 }
 
+.timeline .timeline-title {
+  margin: 0 0 20px 60px;
+  color: inherit;
+}
+
+.timeline .timeline-subtitle {
+  display: inline-block;
+  width: 350px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 26px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #505152;
+}
+
+.timeline .timeline-emoji {
+  display: inline-block;
+  font-size: 76px;
+  margin-right: 30px;
+}
+
 .timeline-badge.primary {
   background-color: #2e6da4 !important;
 }
@@ -136,7 +147,7 @@
 }
 
 .timeline-title {
-  margin-top: 0;
+  margin: 0 0 40px 60px;
   color: inherit;
 }
 
