--- a/css/style.sass
+++ b/css/style.sass
@@ -4,7 +4,7 @@
   // margin-bottom: 100px
   height: 460px
   background-color: #3b4858
-  background: url("../img/bg_001.png")
+  background: url("../img/bg_notext.png")
   background-size: cover
   background-repeat: no-repeat
   .go-back
@@ -16,12 +16,23 @@
       text-decoration: underline
       &:hover
         color: white
+  .updates-text
+    padding: 0 20px
+    font-family: 'Rubik', sans-serif
+    font-size: 94px
+    font-weight: normal
+    font-style: normal
+    font-stretch: normal
+    line-height: normal
+    letter-spacing: 60px
+    text-align: center
+    color: #ffffff
   .tb-logo
     background: url("../img/tb-logo.png")
     background-size: cover
     width: 242px
     height: 48px
-    margin-top: 40px
+    margin: 60px 0px 20px 0px
   .round-img
     position: absolute
     bottom: 0
