--- a/css/timeline.css
+++ b/css/timeline.css
@@ -107,6 +107,18 @@
   color: inherit;
 }
 
+.timeline .timeline-title .last-updated {
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: right;
+  color: #767676;
+}
+
 .timeline .timeline-subtitle {
   display: inline-block;
   width: 350px;
@@ -187,5 +199,18 @@
 
 .card-text {
   margin: 10px 0;
+}
+
+.soon .timeline:before {
+  background-color: unset;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, #eeeeee), color-stop(0%, rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(#eeeeee 60%, rgba(255, 255, 255, 0) 0%);
+  background-position: right;
+  background-size: 3px 30px;
+  background-repeat: repeat-y;
+}
+
+.soon .timeline .timeline-inverted .timeline-badge {
+  top: 10px;
 }
 /*# sourceMappingURL=timeline.css.map */
