--- a/css/style.sass
+++ b/css/style.sass
@@ -32,7 +32,7 @@
     background-size: cover
     width: 242px
     height: 48px
-    margin: 60px 0px 20px 0px
+    margin: 100px 0px 20px 0px
   .round-img
     position: absolute
     bottom: 0
@@ -176,9 +176,12 @@
 .developers
   margin-top: -60px
   margin-bottom: 40px
+  height: 150px
+  overflow: hidden
   .developer
     display: inline-block
     padding-right: 52px
+    padding-bottom: 20px
     &:last-child
       padding-right: 0 !important
     .bubble
@@ -241,3 +244,12 @@
       letter-spacing: normal
       text-align: left
       color: #505152
+
+@media (min-width: 1200px)
+  .developers
+    .developer
+      padding-right: 52px
+@media (min-width: 992px)
+  .developers
+    .developer
+      padding-right: 48px
