--- a/css/style.sass
+++ b/css/style.sass
@@ -185,6 +185,7 @@
     &:last-child
       padding-right: 0 !important
     .bubble
+      margin-right: -30px
       p.speech
         position: relative
         width: 70px
@@ -233,6 +234,7 @@
       font-stretch: normal
       line-height: normal
       letter-spacing: normal
+      text-align: center
       color: #1f1f1f
     .name
       font-family: 'Rubik', sans-serif
@@ -242,14 +244,14 @@
       font-stretch: normal
       line-height: normal
       letter-spacing: normal
-      text-align: left
+      text-align: center
       color: #505152
 
-@media (min-width: 1200px)
-  .developers
-    .developer
-      padding-right: 52px
 @media (min-width: 992px)
   .developers
     .developer
-      padding-right: 48px
+      padding-right: 50px
+@media (min-width: 1200px)
+  .developers
+    .developer
+      padding-right: 74px
