--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .head {
   position: relative;
   overflow: hidden;
@@ -147,6 +148,43 @@
   line-height: normal;
   letter-spacing: normal;
   color: #505152;
+}
+
+.soon .short-story article {
+  margin-bottom: 0;
+}
+
+.soon .short-story article .content {
+  margin-bottom: 20px;
+}
+
+.soon .full-story {
+  margin-top: 20px;
+}
+
+.soon .story .see-full-story {
+  margin-top: 20px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #505152;
+  border-bottom: 2px solid #505152;
+}
+
+.soon .story .see-full-story:hover {
+  text-decoration: none;
+}
+
+.soon .story .see-full-story[aria-expanded=false]:after {
+  content: 'Развернуть подробнее';
+}
+
+.soon .story .see-full-story[aria-expanded=true]:after {
+  content: 'Свернуть подробнее';
 }
 
 .changes .container {
