--- a/css/style.sass
+++ b/css/style.sass
@@ -87,12 +87,12 @@
     text-transform: uppercase
   .col-lg-8
     article
-      margin-bottom: 40px
+      margin-bottom: 25px
       .title
         margin-bottom: 0px
-        padding-bottom: 14px
+        padding-bottom: 10px
         font-family: 'Rubik', sans-serif
-        font-size: 26px
+        font-size: 20px
         font-weight: bold
         font-style: normal
         font-stretch: normal
@@ -101,10 +101,10 @@
         color: #505152
         .status-bar
           padding: 6px 14px
-          margin-left: 25px
+          margin-left: 20px
           box-sizing: border-box
           border-radius: 10px
-          font-size: 18px
+          font-size: 16px
           color: white
           white-space: nowrap 
           &.orange
@@ -115,7 +115,7 @@
             background: #00876b
       .content
         font-family: 'Open Sans', sans-serif
-        font-size: 18px
+        font-size: 16px
         font-weight: normal
         font-style: normal
         font-stretch: normal
@@ -131,16 +131,16 @@
     margin-top: 20px
   .story
     .see-full-story
-      margin-top: 20px
+      margin-top: 10px
       font-family: 'Rubik', sans-serif
-      font-size: 20px
+      font-size: 16px
       font-weight: normal
       font-style: normal
       font-stretch: normal
       line-height: normal
       letter-spacing: normal
       color: #505152
-      border-bottom: 2px solid #505152
+      border-bottom: 2px dashed #505152
       &:hover
         text-decoration: none
       &[aria-expanded=false]:after
