--- a/css/timeline.sass
+++ b/css/timeline.sass
@@ -46,16 +46,16 @@
         //   border-right: 0 solid #ccc
         //   border-bottom: 15px solid transparent
         //   content: " "
-        &:after
-          position: absolute
-          top: 27px
-          right: -14px
-          display: inline-block
-          border-top: 14px solid transparent
-          border-left: 14px solid #fff
-          border-right: 0 solid #fff
-          border-bottom: 14px solid transparent
-          content: " "
+        // &:after
+        //   position: absolute
+        //   top: 27px
+        //   right: -14px
+        //   display: inline-block
+        //   border-top: 14px solid transparent
+        //   border-left: 14px solid #fff
+        //   border-right: 0 solid #fff
+        //   border-bottom: 14px solid transparent
+        //   content: " "
       .timeline-badge
         color: #fff
         width: 25px
@@ -160,7 +160,7 @@
   -webkit-column-count: 2
   -moz-column-count: 2
   column-count: 2
-  column-gap: 3rem
+  column-gap: 2rem
 
 .card-text
   margin: 10px 0
