--- a/css/style.sass
+++ b/css/style.sass
@@ -151,37 +151,37 @@
 .changes
   .container
     margin-bottom: 43px
-    h2
-      text-transform: uppercase
-  .col-lg-6
-    article
-      .title
-        margin-bottom: 8px
-        padding-bottom: 14px
-        font-family: 'Rubik', sans-serif
-        font-family: Rubik
-        font-size: 27px
-        font-weight: bold
-        font-style: normal
-        font-stretch: normal
-        line-height: normal
-        letter-spacing: normal
-        color: #505152
-      .post-img
-        width: 100%
-        height: 100%
-        max-height: 210px
-        min-height: 210px
-        background: #d8d8d8
-      .content
-        font-family: 'Open Sans', sans-serif
-        font-size: 27px
-        font-weight: normal
-        font-style: normal
-        font-stretch: normal
-        line-height: normal
-        letter-spacing: normal
-        color: #505152
+    // h2
+    //   text-transform: uppercase
+    .timeline
+      .timeline-panel
+        .card-title
+          margin-bottom: 8px
+          padding-bottom: 14px
+          font-family: 'Rubik', sans-serif
+          font-family: Rubik
+          font-size: 20px
+          font-weight: bold
+          font-style: normal
+          font-stretch: normal
+          line-height: normal
+          letter-spacing: normal
+          color: #505152
+        .post-img
+          width: 100%
+          height: 100%
+          max-height: 210px
+          min-height: 210px
+          background: #d8d8d8
+        .card-text
+          font-family: 'Open Sans', sans-serif
+          font-size: 16px
+          font-weight: normal
+          font-style: normal
+          font-stretch: normal
+          line-height: normal
+          letter-spacing: normal
+          color: #505152
 
 .card-columns
   hr
