--- a/css/style.sass
+++ b/css/style.sass
@@ -280,3 +280,10 @@
   .developers
     .developer
       padding-right: 74px
+
+
+.see-full-story
+  &.fas
+    &.fa-caret-square-down
+      &:hover
+        text-decoration: none
