--- a/css/timeline.sass
+++ b/css/timeline.sass
@@ -115,7 +115,7 @@
   .timeline-emoji
     display: inline-block
     font-size: 76px
-    margin-right: 30px
+    margin: 0 20px
 
 .timeline-badge
   &.primary
