--- a/css/timeline.css
+++ b/css/timeline.css
@@ -123,7 +123,7 @@
 .timeline .timeline-emoji {
   display: inline-block;
   font-size: 76px;
-  margin-right: 30px;
+  margin: 0 20px;
 }
 
 .timeline-badge.primary {
