--- a/css/style.sass
+++ b/css/style.sass
@@ -111,6 +111,8 @@
             background-color: #e6a300
           &.blue
             background-color: #00bbe6
+          &.purpule
+            background-color: #a10fb3
           &.green
             background: #00876b
       .content
@@ -287,3 +289,7 @@
     &.fa-caret-square-down
       &:hover
         text-decoration: none
+
+a.fa-caret-square-down
+  &:hover
+    text-decoration: none
