--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,12 @@
 .head .updates-text {
   padding: 0 20px;
   font-family: 'Rubik', sans-serif;
-  font-size: 94px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
+  font-size: 74px;
   line-height: normal;
-  letter-spacing: 60px;
+  letter-spacing: 40px;
   text-align: center;
   color: #ffffff;
+  margin-right: -40px;
 }
 
 .head .tb-logo {
