--- a/css/style.sass
+++ b/css/style.sass
@@ -19,14 +19,12 @@
   .updates-text
     padding: 0 20px
     font-family: 'Rubik', sans-serif
-    font-size: 94px
-    font-weight: normal
-    font-style: normal
-    font-stretch: normal
+    font-size: 74px
     line-height: normal
-    letter-spacing: 60px
+    letter-spacing: 40px
     text-align: center
     color: #ffffff
+    margin-right: -40px
   .tb-logo
     background: url("../img/tb-logo.png")
     background-size: cover
